# pathological-regularization-regimes

./: .envrc.example  .gitignore  LICENSE  README.md  benchmark-multirun.py  generate-data.py  main.py  multirun-script.py  pyproject.toml  pyrightconfig.json
conf/: base-model-fitting.yaml  data-generation.yaml
notebooks/: cross-validation.ipynb
src/prr/: docs.py  simpson.py  simulation_stats.py  trends.py  utils.py
tests/: test_docs.py  test_simpson.py  test_simulation_stats.py  test_trends.py  test_utils.py
